fixing mobile overflow issues

--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ header {
   font-family: 'SmallerFont', sans-serif;
 }
 
-  header .row {
+header .row {
   height: 10vh;
   position: fixed;
   background: #ffffff;
@@ -44,6 +44,7 @@ header .row, footer .row {
   margin-left: 0;
   margin-right: 0;
   width: 100%;
+  max-width: 100vw !important;
 }
 
 header nav {
@@ -51,6 +52,7 @@ header nav {
   justify-content: flex-end;
   padding: 0 !important;
   width: initial !important;
+  max-width: 100vw !important;
 }
 
 header div.logos {
@@ -375,5 +377,9 @@ footer a:hover {
 
   h3 {
     font-size: 14px !important;
+  }
+
+  header div.logos {
+    max-width: 100vw !important;
   }
 }
